# Rust

./: .env.example  .gitignore  Cargo.toml  PROJECT_STATUS.md  README.md  build-frontend.sh  dev.sh  docker-compose.yml  get_spotify_token.sh  setup.sh  test_api.sh
backend/: Cargo.toml
backend/src/: handlers.rs  main.rs  models.rs  neo4j_db.rs  rate_limiter.rs  spotify.rs  youtube.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package.json
frontend/src/: lib.rs  main.rs  test_main.rs  types.rs
frontend/src/components/: common.rs  mod.rs  navbar.rs
frontend/src/pages/: artists.rs  home.rs  mod.rs  playlists.rs  recommendations.rs  tracks.rs
frontend/src/services/: api.rs
src/: handlers.rs  main.rs  youtube.rs
