[package]
name = "spotify-neo4j-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen-futures = "0.4"
gloo-net = "0.4"
gloo-console = "0.3"
gloo-storage = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Location",
  "History",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "Event",
  "EventTarget",
  "MouseEvent",
  "KeyboardEvent",
  "InputEvent",
  "Storage",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
  "AbortController",
  "AbortSignal",
]
